# odyssey-launcher

./: .eslintrc.json  .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  response.txt  scrape.txt  tailwind.config.js
.github/workflows/: ci.yaml  publish.yaml
src/: App.tsx  renderer.tsx  router.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  genshin-loader-manifest.rc  tauri.conf.json
src-tauri/metadata/: mhy_resources.json  packages.json
src-tauri/src/: main.rs
src-tauri/src/commands/: application_executor.rs  assets.rs  hello_world.rs  installation.rs  io.rs  mod.rs  utils.rs
src-tauri/src/game/: get_version.rs  mod.rs  version.rs
src-tauri/src/installation/: archive.rs  downloader.rs  free_space.rs  manager.rs  mod.rs
src-tauri/src/lib/: asset_manager.rs  asset_scraper.rs  discord_rpc.rs  game_manifests.rs  genshin_utils.rs  mod.rs  prettify_bytes.rs  process_utils.rs
src-tauri/src/traits/: fps_unlocker.rs  mod.rs
src/components/: error-boundary.tsx
src/components/core/: app-rest.tsx  loading-screen.tsx  main-game-info.tsx  missing-game-installation.tsx
src/components/core/game-announcements/: banners.tsx  latest-announcements-group.tsx  notifications-tabs.tsx  notifications.tsx
src/components/core/installation/: auto-detected-path.modal.tsx  fresh-install.modal.tsx  installation-screen.tsx  uninstall.modal.tsx
src/components/core/window/: decorations.tsx  sidebar.tsx
src/components/core/wrappers/: debug-overlay.tsx  route-page.tsx
src/components/layouts/: animation-layout.tsx  loading-layout.tsx  root-layout.tsx
src/components/state/: application-state.default.ts  application-state.fills.ts  application-state.ts
src/components/ui/: button.tsx  dialog.tsx  divider.tsx  progress.tsx  sidebar-tabs.tsx  spinner.tsx  switch.tsx  tabs.tsx  warning.tsx
src/lib/: __STORE.ts  genshin_lib.ts  ptypes.ts  store.ts  types.d.ts  utils.ts
src/routes/: app.tsx  not-found.tsx  packages.tsx  screenshots.tsx
src/styles/: button.css  spinner.module.css
