[package]
name = "odyssey-launcher"
version = "0.0.0"
description = "GUI Application to manage your GIMI Mods, easily manage your fps unlocking"
authors = ["Mufaro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
embed-resource = "2.4.2"


[dependencies]
tauri = { version = "1", features = [
  "protocol-asset",
  "path-all",
  "fs-all",
  "updater",
  "macos-private-api",
  "window-all",
  "system-tray",
  "dialog-all",
  "shell-open",
  "icon-ico",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
ini = "1.3.0"
reqwest = { version = "0.11.25", features = ["blocking"] }
scraper = "0.19.0"
base64 = "0.22.0"
engine = "0.0.0"
log = "0.4.21"
discord-presence = "1.1.1"
discord-rich-presence = "0.2.3"
thiserror = "1.0.58"
tokio = "1.36.0"
winreg = "0.52.0"
simple_logger = "4.3.3"
sysinfo = "0.30.7"
minreq = { version = "2.11.0", features = [
  "json-using-serde",
  "https-rustls-probe",
  "proxy",
] }
dns-lookup = "2.0.4"
tar = "0.4.40"
zip = "0.6.6"
bzip2 = "0.4.4"
flate2 = "1.0.28"
xz = "0.1.0"
anyhow = "1.0.81"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
